# Acleris

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
acleris/: Acleris.cpp  Acleris.h  CMakeLists.txt  Color.h  DrawList.h  Line.h  Matrix.h  Point.h  Shapes.h  Triangle.h  Vector.h  Vertex.h
acleris/common/: Point.h  StaticFor.h  Vertex.h
acleris/util/: Algorithm.h  Format.h  Func.h  NArray.h  Point.h  Tuple.h  Vector.h
